--- a/ToDoList-master/index.html
+++ b/ToDoList-master/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-   <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
       integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
@@ -19,8 +19,8 @@
     />
 
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <link rel="stylesheet" href="CSS/main.css" />
-    <link rel="stylesheet" href="CSS/media.css" />
+    <link rel="stylesheet" href="./CSS/main.css" />
+    <link rel="stylesheet" href="./CSS/media.css" />
     <title>ADD A TASK</title>
   </head>
 
